--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,14 @@
 Type: Package
-Package: r.pkg.template
+Package: coursera.cicd.lab
 Title: R Package Template
-Version: 0.1.0.9113
+Version: 0.1.0
 Date: 2023-04-17
 Authors@R:
-    person("insightsengineering", , , "insightsengineering@example.com", role = c("aut", "cre"))
+    person("JÃjrmie", , , "JÃjrmie@example.com", role = c("aut", "cre"))
 Description: R package template with GitHub Actions workflows included.
 License: Apache License 2.0 | file LICENSE
-URL: https://github.com/insightsengineering/r.pkg.template/
-BugReports: https://github.com/insightsengineering/r.pkg.template/issues
+URL: https://github.com/JÃjrmie/coursera.cicd.lab/
+BugReports: https://github.com/JÃjrmie/coursera.cicd.lab/issues
 Depends:
     R (>= 3.6)
 Imports:
