--- a/staged_dependencies.yaml
+++ b/staged_dependencies.yaml
@@ -1,7 +1,7 @@
 ---
 # Information about this file: https://github.com/openpharma/staged.dependencies
 current_repo:
-  repo: JÃjrmie/coursera.cicd.lab
+  repo: jrmie/coursera.cicd.lab
   host: https://github.com
 upstream_repos:
 downstream_repos:
